--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="refresh" content="0; url=landing.html">
+  <meta http-equiv="refresh" content="0; url=setup.html">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>LockedIn — Loading…</title>
 
   <script>
     // JS fallback redirect
-    window.location.replace('landing.html');
+    window.location.replace('setup.html');
   </script>
 
   <style>
@@ -30,6 +30,6 @@
   </style>
 </head>
 <body>
-  <div>Redirecting to <a href="landing.html">Landing</a>…</div>
+  <div>Redirecting to <a href="setup.html">Setup</a>…</div>
 </body>
 </html>
