--- a/setup.html
+++ b/setup.html
@@ -14,7 +14,7 @@
       <div class="branding">
         <div class="clock-icon" aria-hidden="true">🕐</div>
         <h1 class="app-title">LockedIn</h1>
-        <p class="tagline">Lock in. Clock out.</p>
+        <p class="tagline">LockIn and Focus</p>
       </div>
 
       <!-- Duration selection -->
@@ -69,12 +69,6 @@
         <span id="toggleAdvancedText">⚙️ Advanced Settings</span>
         <span class="toggle-icon">▼</span>
       </button>
-
-      <!-- Info text -->
-      <div class="info-text">
-        <p>Emergency calls still get through.</p>
-        <p id="totalTime">Total focus time: 0h 0m</p>
-      </div>
     </div>
 
     <!-- Advanced settings form -->
@@ -173,7 +167,18 @@
           <button id="startBtnAdvanced" class="btn-primary" type="button" style="width:100%;">Start Session</button>
         </div>
       </form>
+      
+      <!-- Info text -->
+      <div class="info-text">
+        <p>Emergency calls still get through.</p>
+        <p id="totalTime">Total focus time: 0h 0m</p>
+      </div>
     </div>
+    
+    <!-- Footer -->
+    <footer class="setup-footer">
+      <p>Majestech 2025</p>
+    </footer>
   </main>
 
   <!-- Alerts for test button -->
